// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in.vue 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
<div>{{foo}}</div>
</template>

<script lang="ts">
1  + 2
</script>

=====================================output=====================================
<template>
  <div>{{ foo }}</div>
</template>

<script lang="ts">
1 + 2;
</script>

================================================================================
`;

exports[`in.vue 2`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
<div>{{foo}}</div>
</template>

<script lang="ts">
1  + 2
</script>

=====================================output=====================================
<template>
  <div>{{foo}}</div>
</template>

<script lang="ts">
1  + 2
</script>

================================================================================
`;
